# grpc-server-client-pointcloud-cluster

./: .gitignore  Dockerfile  Dockerfile__OLD  README.md  config.json  docker-compose.cpp.yml  docker-compose.python.yml  prompt.md  requirements.txt  run.cpp.sh  run.py.sh
.github/workflows/: ci.yml  docker-compose-build.yml
help/: Dockerfile  README.md  analyze_pcd.py  docker-compose.yml  entrypoint.sh  run.sh  visualize.py
src/cpp/client/: CMakeLists.txt  client-setup.sh  client.Dockerfile  client.cpp  client.sh
src/cpp/server/: CMakeLists.txt  entrypoint.sh  server-setup.sh  server.Dockerfile  server.cpp  server.sh
src/python/client/: client-setup.sh  client.Dockerfile  client.py  client.sh
src/python/server/: server-setup.sh  server.Dockerfile  server.py  server.sh
